fixed the dumbass  scrollbar issue

--- a/assets/main.css
+++ b/assets/main.css
@@ -40,6 +40,7 @@ html, body {
   width: 100vw;
   min-height: 100vh;
   min-width: 320px;
+  scrollbar-gutter: stable;
 }
 
 body {
